Tue Jun 06 08:37:00 BST 2000 petermount@it.maidstone.gov.uk
	- Removed a hardwired 8K limit on query strings
	- Added some missing org.'s in Connection that prevented
	  the use of the geometric types.

Thu Jun 01 07:26:00 BST 2000 petermount@it.maidstone.gov.uk
	- Removed timezone in getTimestamp() methods in ResultSet.

Mon May 15 22:30:00 BST 2000 peter@retep.org.uk
	- Fixed the message Makefile produces after compiling. It still said
	  about the old Driver class, not the new package. Spotted by
	  Joseph Shraibman <jks@p1.selectacast.net>

Thu May 04 11:38:00 BST 2000 petermount@it.maidstone.gov.uk
	- Corrected incorrect date in CHANGELOG
	- Fixed the ImageViewer example
	
Wed May 03 16:47:00 BST 2000 petermount@it.maidstone.gov.uk
	- Fixed the Makefile so that postgresql.jar is built everytime
	  the jdbc1 or jdbc2 rules are called.
	- Fixed the threadsafe example. It had problems with autocommit
	
Wed May 03 14:32:00 BST 2000 petermount@it.maidstone.gov.uk
	- Rewrote the README file (the old one was 18 months old!)
	- Added @deprecated tags to org.postgresql.jdbc2.ResultSet
	  to clear some warnings issued during compilation.
	
Wed Apr 12 22:14:00 BST 2000 peter@retep.org.uk
	- Implemented the JDBC2 Blob interface, and ResultSet.getBlob().
	
Wed Apr 12 20:20:00 BST 2000 peter@retep.org.uk
	- Fixed bug in ResultSet.absolute(). Negative rows are now supported.
	- Implemented ResultSet.relative(), afterLast().
	
Tue Feb  1 21:40:00 GMT 2000 peter@retep.org.uk
	- Finally imported the contributed javax extensions by Assaf Arkin
	  arkin@exoffice.com

Mon Jan 24 21:00:00 GMT 2000 peter@retep.org.uk
	- Finally introduced the 7.0 additions to the core CVS repository.
	- All source files are now under the org.postgresql package (previously
	  they were under postgresql). The package lines now changed
	  accordingly.
	- The Makefile was rewritten so it should now work on machines that
	  can't handle the $( ) syntax.